@@ -10,18 +10,15 @@ public class EntrypointRunner {
 
     public static <T> void runEntrypoint(String entrypoint, Class<T> type, Consumer<? super T> invoker) {
         Collection<EntrypointContainer<T>> entrypoints = FabricLoader.getInstance().getEntrypointContainers(entrypoint, type);
-        if (entrypoints.isEmpty()) {
-            return;
-        }
+        if (entrypoints.isEmpty()) return;
 
         for (EntrypointContainer<T> container : entrypoints) {
             try {
                 invoker.accept(container.getEntrypoint());
             } catch (Throwable t) {
-                String message = String.format("Failed to run ['%s'] due to ['%s'] throwing an exception!", entrypoint, container.getProvider().getMetadata().getId());
-                if (container.getProvider().getMetadata().getContact().asMap().containsKey("issues")) {
-                    message += " Please report this issue at " + container.getProvider().getMetadata().getContact().get("issues");
-                }
+                String message = container.getProvider().getMetadata().getContact().get("issues")
+                        .map(s -> "Failed to run ['%s'] due to ['%s'] throwing an exception! Please report this issue at %s".formatted(entrypoint, container.getProvider().getMetadata().getId(), s))
+                        .orElseGet(() -> "Failed to run ['%s'] due to ['%s'] throwing an exception!".formatted(entrypoint, container.getProvider().getMetadata().getId()));
                 throw new RuntimeException(message, t);
             }
         }
